Write authors consistently.  Write <based-on>.
Thanks to Lassi, we now have a schema for authors that separates them
into distinct data items, allows an optional description for each, and
moves the idea of one SRFI being based on another to a separated
field, <based-on>.

--- a/README.org
+++ b/README.org
@@ -1,6 +1,10 @@
 * SRFI 160: Homogeneous numeric vector libraries
 
-** by John Cowan (based on SRFI 4 by Marc Feeley) and Shiro Kawai (contributed a major patch)
+** by John Cowan and Shiro Kawai (contributed a major patch)
+
+Based on SRFI 4 by Marc Feeley.
+
+
 
 This repository hosts [[https://srfi.schemers.org/srfi-160/][SRFI 160]]: Homogeneous numeric vector libraries, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
