--- a/README.org
+++ b/README.org
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2018 Arthur A. Gleckler <srfi@speechcode.com>
+#
+# SPDX-License-Identifier: MIT
+
 * SRFI 160: Homogeneous numeric vector libraries
 
 ** by John Cowan and Shiro Kawai (contributed a major patch)
