SRFI editor copyright\n\nFor simplicity and consistency, SRFI editor retains copyright on these files.  Abstract was provided by authors, but is subject to fair use.

--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 
-# SPDX-FileCopyrightText: 2024 John Cowan and Shiro Kawai (contributed a major patch)
+# SPDX-FileCopyrightText: 2024 Arthur A. Gleckler
 # SPDX-License-Identifier: MIT
 * SRFI 160: Homogeneous numeric vector libraries
 
